# Anchor

./: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
.expo/types/: router.d.ts
.github/workflows/: build.yaml
__tests__/: businessSubject.test.ts  consumerObserver.test.ts  test.test.tsx  useColorScheme.native.test.ts  useColorScheme.web.test.ts  useOrgDetails.test.ts  useThemeColor.test.ts
__tests__/app/: index.test.tsx
__tests__/components/: error-display.test.tsx  posts.test.tsx  sign-up-container.test.tsx
__tests__/convex/: businesses.test.tsx
app/: _layout.tsx  index.tsx
app/(auth)/: _layout.tsx  sign-in.tsx  sign-up.tsx
app/(auth-business)/: index.tsx  set-up.tsx
app/(business)/: _layout.tsx  index.tsx
app/(home)/: _layout.tsx  index.tsx  map.tsx  saved.tsx  savedPosts.tsx  search-container.tsx  search.tsx
apps/backend/: README.md  environment.py  main.py  package.json  pyproject.toml
apps/backend/routes/: users.py
apps/frontend/: global.css  metro.config.js  package.json
components/: error-display.tsx  loader.tsx  search-bar.tsx  sign-up-container.tsx  spacer.tsx
components/businessComponents/: addPost.tsx  businessHeader.tsx  publicBusinessAccount.tsx
components/clerk/: AccountFormContainer.tsx  UserImageSelector.tsx  editBusinessAccount.tsx  (+1 more)
constants/: types.ts
convex/: auth.config.ts  businesses.ts  mutations.ts  posts.ts  queries.ts  schema.ts  users.ts
hooks/: use-org-details.ts
lib/: helpers.ts
providers/: tanStackProvider.tsx
services/: observer.ts  subject.ts
(+53 files in other folders)
