[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clerk-backend-api>=4.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
